--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,7 +9,7 @@
 
 .profile__add-button {
   margin: auto 0 auto auto;
-  background-image: url(/../images/add-button.svg);
+  background-image: url(../../../images/add-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: #000;
