--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -8,7 +8,7 @@
 }
 
 .elements__like {
-  background-image: url(/../images/like.svg);
+  background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
   background-size: 21px;
   background-position: center;
