--- a/blocks/elements/_actived/elements__like_actived.css
+++ b/blocks/elements/_actived/elements__like_actived.css
@@ -1,3 +1,3 @@
 .elements__like_actived {
-  background-image: url(/../images/like_active.svg);
+  background-image: url('../../../../images/like_active.svg');
 }
