--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,7 +1,7 @@
 .popup__close {
   width: 32px;
   height: 32px;
-  background-image: url('/../images/close-button.svg');
+  background-image: url('../../../images/close-button.svg');
   background-color: rgba(0, 0, 0, 0);
   border: none;
   position: absolute;
