--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,7 +10,7 @@
 .profile__edit-button {
   margin: auto 0 9px 18px;
   background-color: #000;
-  background-image: url(/../images/edit-button.svg);
+  background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   border: 1px solid #fff;
